--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <hr>
             <div class="page8-end">
                 <div class="page8-end-l">
-                    <h4>Copyright &copy 2023 Jayesh. All Rights Reserved.</h4>
+                    <h4>Copyright &copy 2023 Abhi All Rights Reserved.</h4>
                 </div>
                 <div class="page8-end-r">
                     <h4>User Terms & Conditions | Privacy Policy</h4>
